# workspaceanalysisFK

./: CMakeLists.txt  M1_full.bt  M1_full_load.bt  M1_full_load_10.bt  M1_full_load_25.bt  NewvisitPointCount.txt  README.md  state.txt
debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
debug/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/workspaceanalysis/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/: CMakeLists.txt  main.cpp  testload_m1_ws.cpp  twoTCPIK.cpp  visualize.cpp  ws_m1.cpp  ws_m1_load.cpp
load 0.05/: M1_full_load.bt  NewvisitPointCount_load.txt
models/Environment/: ground_terrain.urdf
models/M1/: M1.urdf  M1_full.urdf  M1_full_load.urdf
models/M1/meshes/collision/: amr_convex_hull.mtl  headPart1_convex_hull.mtl  headPart2_convex_hull.mtl  leftArmPart3_convex_hull.mtl  leftArmPart4_convex_hull.mtl  leftArmPart5_convex_hull.mtl  leftArmPart8_convex_hull.mtl  leftHand_convex_hull.mtl  legPart2_convex_hull.mtl  legPart3_convex_hull.mtl  rightArmPart2_convex_hull.mtl  rightArmPart3_convex_hull.mtl  rightArmPart6_convex_hull.mtl  rightArmPart8_convex_hull.mtl  rightHand_convex_hull.mtl  torso_convex_hull.mtl
models/M1/meshes/visual/: amr.mtl  armPart4.mtl  armPart8.mtl  headPart2.mtl  leftArmPart2.mtl  leftArmPart6.mtl  leftArmPart7.mtl  leftHand.mtl  legPart1.mtl  rightArmPart4.mtl  rightArmPart5.mtl  rightArmPart7.mtl  rightHand.mtl
models/diana7/: diana7.urdf
models/diana7/meshes/visual/: base_link.mtl  link1.mtl  link3.mtl  link7.mtl
src/: SpaceSampler.cpp  SpaceSampler.h  main.cpp
workspaceanalysis/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  Checker.cpp  Checker.h  CtrlC.cpp  CtrlC.h  SpaceSampler.cpp  SpaceSampler.h
workspaceanalysis/robot/: RobotSystem.cpp  RobotSystem.h
workspaceanalysis/utils/: Types.hpp
